--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
   <div class='topbar'>
-    <a href='http://leemlam.github.io'>Clicker Clicker</a>
+    <a href='https://rudolphcodes.github.io/Clicker/'>Clicker Clicker</a>
   </div>
     <center class='center'>
       <h1 id='total'>LB: 0</h1>
